objects/Veda_Comprehensive_pdf_params__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>end_point__c</fullName>
        <label>end point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Comprehensive pdf params</label>
</CustomObject>